fix(ingredients): ensure delete ingredient button updates visibility and renumbering correctly
- Updated `form.php` to handle ingredient deletion
- Updated styles in `forms.css`
- Enhanced logic in `cocktail.js` to ensure ingredient gets deleted.

--- a/public/assets/css/components/forms.css
+++ b/public/assets/css/components/forms.css
@@ -210,7 +210,7 @@ input[type="submit"] {
             }
         }
 
-        & .remove-ingredient-button,
+        & .delete-ingredient-button,
         & .delete-step-button {
             position: absolute;
             top: .5rem;
